# etl-lattes-openalex

./: .env  README.md  docker-compose.yml  init-db.sql  pyproject.toml  run_pipeline.py
backend/: .gitignore  main.py  requirements.txt
backend/core/: config.py  database.py
backend/models/: busca.py  pesquisador.py  producao.py
backend/routers/: areas.py  busca.py  metricas.py  pesquisadores.py  producoes.py
backend/scripts/gold/: self_query_retriever.py
backend/services/: busca_service.py  embedding_service.py  pesquisador_service.py  producao_service.py
data-storage/01-bronze/open-alex/13062026/authors/: authors_13062026.parquet
data-storage/01-bronze/open-alex/13062026/works/: works_13062026.parquet
frontend/: .env  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/areas/: page.tsx
frontend/src/app/busca/: page.tsx
frontend/src/app/pesquisadores/: page.tsx
frontend/src/app/producoes/: page.tsx
frontend/src/components/: Navbar.tsx  SearchBar.tsx  ThemeProvider.tsx  ThemeToggle.tsx  Tooltip.tsx
frontend/src/lib/: api.ts
scripts/: utils.py
scripts/gold/: consolidado_pesquisadores_producoes.py  create_dim_tempo.py  embedding_utils.py  load_relacional.py  load_star_schema.py
scripts/lattes/: pesquisadores_bronze_to_silver.py  pesquisadores_landing_to_bronze.py
scripts/open-alex/authors/: authors_api_to_bronze.py
scripts/open-alex/works/: works_api_to_bronze.py  works_bronze_to_silver.py
scripts/silver/: areas_atuacao_bronze_to_silver.py  formacoes_bronze_to_silver.py
(+17 files in other folders)
