[project]
name = "pipeline-etl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deep-translator>=1.11.4",
    "ipykernel>=7.2.0",
    "notebook>=7.5.6",
    "pandas>=3.0.3",
    "polars>=1.40.1",
    "prefect>=3.7.0",
    "pyarrow>=24.0.0",
    "requests>=2.34.2",
    "xmltodict>=1.0.4",
    "psycopg2-binary>=2.9.9",
    "sentence-transformers>=3.0.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
]
